Fixed overlap on scrolling in the menu

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,16 +1,17 @@
 .menu {
   box-sizing: border-box;
   height: 100vh;
-  background-color: #C2C2C2;
+  background-color: $menu-bg-color;
   font-weight: 600;
   text-transform: uppercase;
-  overflow: auto;
+  overflow-y: auto;
 
   &__top {
     margin-bottom: 24px;
     position: sticky;
     top: 0;
     z-index: 1;
+    background-color: $menu-bg-color;
 
     @include on-table {
       margin-bottom: 8px;
