--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,6 @@
 $tablet-min-width: 576px;
 $desktop-min-width: 1024px;
 $menu-text-color: #1D1D1D;
+$menu-bg-color: #C2C2C2;
 $transition-duration: 0.3s;
 
